--- a/zeleniKljucHakaton/ui/Home/HomeViewController.xib
+++ b/zeleniKljucHakaton/ui/Home/HomeViewController.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,10 +23,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v8f-99-0Rf">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <rect key="frame" x="0.0" y="48" width="414" height="848"/>
                     <subviews>
                         <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P0m-Ef-Tb3">
-                            <rect key="frame" x="0.0" y="896" width="414" height="0.0"/>
+                            <rect key="frame" x="0.0" y="848" width="414" height="0.0"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" id="tzG-l8-XTx"/>
@@ -34,7 +35,7 @@
                             <color key="tintColor" red="0.78643521250000004" green="0.86247830299999995" blue="0.27727047040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </tabBar>
                         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y9s-T6-hJ8">
-                            <rect key="frame" x="0.0" y="7.5" width="414" height="888.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="848"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ae7-fI-yuw">
                                     <rect key="frame" x="32" y="707.5" width="350" height="45"/>
@@ -226,25 +227,25 @@
                         <constraint firstItem="y9s-T6-hJ8" firstAttribute="leading" secondItem="P0m-Ef-Tb3" secondAttribute="leading" id="FOe-KP-0nb"/>
                         <constraint firstItem="y9s-T6-hJ8" firstAttribute="trailing" secondItem="P0m-Ef-Tb3" secondAttribute="trailing" id="X6A-nC-aBr"/>
                         <constraint firstItem="P0m-Ef-Tb3" firstAttribute="top" secondItem="y9s-T6-hJ8" secondAttribute="bottom" id="ZfW-NE-LXo"/>
-                        <constraint firstItem="y9s-T6-hJ8" firstAttribute="top" secondItem="v8f-99-0Rf" secondAttribute="top" constant="7.5" id="fVM-12-BAM"/>
+                        <constraint firstItem="y9s-T6-hJ8" firstAttribute="top" secondItem="v8f-99-0Rf" secondAttribute="top" id="fVM-12-BAM"/>
                         <constraint firstItem="P0m-Ef-Tb3" firstAttribute="leading" secondItem="v8f-99-0Rf" secondAttribute="leading" id="j6U-sI-GZA"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="backgroundBlue"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="v8f-99-0Rf" secondAttribute="bottom" id="4Ud-ms-zAp"/>
                 <constraint firstAttribute="trailing" secondItem="v8f-99-0Rf" secondAttribute="trailing" id="FdF-kv-CZM"/>
                 <constraint firstItem="v8f-99-0Rf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Mtu-QZ-HY6"/>
-                <constraint firstItem="v8f-99-0Rf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="y97-rj-WFf"/>
+                <constraint firstItem="v8f-99-0Rf" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="lIW-gF-Rdv"/>
             </constraints>
             <point key="canvasLocation" x="131.8840579710145" y="90.401785714285708"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="backgroundBlue">
+            <color red="0.23999999463558197" green="0.51800000667572021" blue="0.65399998426437378" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
