--- a/zeleniKljucHakaton/ui/ReportProblem/ReportProblemViewController.xib
+++ b/zeleniKljucHakaton/ui/ReportProblem/ReportProblemViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,16 +27,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Hh-eM-bJr">
-                    <rect key="frame" x="0.0" y="51.666666666666686" width="414" height="844.33333333333326"/>
+                    <rect key="frame" x="0.0" y="99.5" width="414" height="762.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Želim da prijavim anonimno" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M8V-1q-t92">
-                            <rect key="frame" x="141.66666666666663" y="89" width="187.33333333333337" height="18"/>
+                            <rect key="frame" x="141.5" y="89" width="187.5" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" systemColor="systemGray2Color"/>
                             <color key="highlightedColor" systemColor="systemGray3Color"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dodajte sliku" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pzo-Nr-Zte">
-                            <rect key="frame" x="21.000000000000007" y="456" width="88.666666666666686" height="18"/>
+                            <rect key="frame" x="21" y="456" width="88.5" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" systemColor="systemGray2Color"/>
                             <color key="highlightedColor" systemColor="systemGray3Color"/>
@@ -44,10 +44,10 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aes-wo-kkm">
                             <rect key="frame" x="20" y="255" width="374" height="174"/>
                             <subviews>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8X6-Bw-atY">
-                                    <rect key="frame" x="1" y="1" width="372" height="172"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <color key="textColor" systemColor="labelColor"/>
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8X6-Bw-atY">
+                                    <rect key="frame" x="0.0" y="0.0" width="374" height="174"/>
+                                    <color key="backgroundColor" red="0.99815428318436616" green="0.99815428318436616" blue="0.99815428318436616" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no"/>
                                     <userDefinedRuntimeAttributes>
@@ -57,13 +57,13 @@
                                     </userDefinedRuntimeAttributes>
                                 </textView>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemGray4Color"/>
+                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="174" id="RsJ-EA-uZ0"/>
-                                <constraint firstItem="8X6-Bw-atY" firstAttribute="top" secondItem="aes-wo-kkm" secondAttribute="top" constant="1" id="S1R-vf-899"/>
-                                <constraint firstAttribute="trailing" secondItem="8X6-Bw-atY" secondAttribute="trailing" constant="1" id="hep-IK-3kT"/>
-                                <constraint firstItem="8X6-Bw-atY" firstAttribute="leading" secondItem="aes-wo-kkm" secondAttribute="leading" constant="1" id="k7o-0S-d6e"/>
-                                <constraint firstAttribute="bottom" secondItem="8X6-Bw-atY" secondAttribute="bottom" constant="1" id="uOI-de-OYG"/>
+                                <constraint firstItem="8X6-Bw-atY" firstAttribute="top" secondItem="aes-wo-kkm" secondAttribute="top" id="S1R-vf-899"/>
+                                <constraint firstAttribute="trailing" secondItem="8X6-Bw-atY" secondAttribute="trailing" id="hep-IK-3kT"/>
+                                <constraint firstItem="8X6-Bw-atY" firstAttribute="leading" secondItem="aes-wo-kkm" secondAttribute="leading" id="k7o-0S-d6e"/>
+                                <constraint firstAttribute="bottom" secondItem="8X6-Bw-atY" secondAttribute="bottom" id="uOI-de-OYG"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -72,10 +72,12 @@
                             </userDefinedRuntimeAttributes>
                         </view>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Ime i prezime" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iKU-xU-Fje">
-                            <rect key="frame" x="21" y="20.000000000000007" width="373" height="49.999999999999993"/>
+                            <rect key="frame" x="21" y="20" width="373" height="50"/>
+                            <color key="backgroundColor" red="0.9884401176601797" green="1" blue="0.98626078356757441" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="dIq-BC-EEp"/>
                             </constraints>
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no"/>
                             <userDefinedRuntimeAttributes>
@@ -97,9 +99,11 @@
                         </button>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Lokacija problema koji prijavljujete" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VUI-er-hWl">
                             <rect key="frame" x="21" y="127" width="373" height="50"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="Oxj-0Z-okc"/>
                             </constraints>
+                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                             <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no"/>
                         </textField>
@@ -136,7 +140,7 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mappin.and.ellipse" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0jO-fW-1mE">
-                            <rect key="frame" x="344" y="129" width="50" height="35"/>
+                            <rect key="frame" x="349" y="128.5" width="50" height="35.5"/>
                             <color key="tintColor" red="0.23296272749999999" green="0.52554482219999998" blue="0.65403217079999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="50" id="wlq-t3-ZHu"/>
@@ -153,7 +157,7 @@
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9R5-Te-Sto">
                             <rect key="frame" x="20" y="497" width="374" height="100"/>
-                            <color key="backgroundColor" systemColor="systemRedColor"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="100" id="Kn6-Uj-DbK"/>
                             </constraints>
@@ -214,7 +218,7 @@
                         <constraint firstItem="c3C-Sx-5oQ" firstAttribute="leading" secondItem="M8V-1q-t92" secondAttribute="trailing" constant="20" id="bwY-oB-WEA"/>
                         <constraint firstItem="Pzo-Nr-Zte" firstAttribute="leading" secondItem="VUI-er-hWl" secondAttribute="leading" id="cMJ-qX-rEy"/>
                         <constraint firstItem="uaA-qK-PrH" firstAttribute="trailing" secondItem="hrq-7X-2Fh" secondAttribute="trailing" constant="10" id="eUQ-oB-8Z8"/>
-                        <constraint firstItem="uaA-qK-PrH" firstAttribute="trailing" secondItem="0jO-fW-1mE" secondAttribute="trailing" constant="20" id="gbJ-ny-Rnf"/>
+                        <constraint firstItem="uaA-qK-PrH" firstAttribute="trailing" secondItem="0jO-fW-1mE" secondAttribute="trailing" constant="15" id="gbJ-ny-Rnf"/>
                         <constraint firstItem="0jO-fW-1mE" firstAttribute="top" secondItem="c3C-Sx-5oQ" secondAttribute="bottom" constant="11" id="jCV-zJ-zD3"/>
                         <constraint firstItem="aes-wo-kkm" firstAttribute="top" secondItem="WSz-Lr-8kK" secondAttribute="bottom" constant="14" id="lfr-Fn-lUF"/>
                         <constraint firstItem="uaA-qK-PrH" firstAttribute="trailing" secondItem="VUI-er-hWl" secondAttribute="trailing" constant="20" id="ogp-tF-F2L"/>
@@ -229,14 +233,14 @@
                     <viewLayoutGuide key="frameLayoutGuide" id="uaA-qK-PrH"/>
                 </scrollView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Prijavi problem" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pfy-DJ-bpT">
-                    <rect key="frame" x="25" y="10" width="364" height="26.666666666666671"/>
+                    <rect key="frame" x="25" y="58" width="364" height="26.5"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="0.97770514455782309" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="6Hh-eM-bJr" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="DEs-LS-3UA"/>
                 <constraint firstItem="Pfy-DJ-bpT" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="EbT-vq-Kqf"/>
@@ -253,26 +257,14 @@
         <image name="camera.fill" catalog="system" width="128" height="93"/>
         <image name="checkmark.square" catalog="system" width="128" height="114"/>
         <image name="mappin.and.ellipse" catalog="system" width="117" height="128"/>
-        <systemColor name="labelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray3Color">
             <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
-        <systemColor name="systemGray4Color">
-            <color red="0.81960784313725488" green="0.81960784313725488" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
