--- a/zeleniKljucHakaton/ui/SuccessfulSentReport/SuccessfulReportViewController.xib
+++ b/zeleniKljucHakaton/ui/SuccessfulSentReport/SuccessfulReportViewController.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,19 +20,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="6. Oktobar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="puh-Xk-khZ">
-                    <rect key="frame" x="25" y="49" width="364" height="16"/>
+                    <rect key="frame" x="25" y="53" width="364" height="16"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <color key="textColor" red="0.67989784480000004" green="0.69577658180000002" blue="0.71055740119999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Uspešno ste prijavili problem!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T1a-Rr-Qwd">
-                    <rect key="frame" x="25" y="75" width="364" height="29"/>
+                    <rect key="frame" x="25" y="79" width="364" height="29"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Dd-uc-bbg">
-                    <rect key="frame" x="25" y="139" width="364" height="162.5"/>
+                    <rect key="frame" x="25" y="143" width="364" height="162.5"/>
                     <string key="text">Vaša prijava je uspesno prosledjena zaduženoj instituciji.
 Hvala Vamna pomoci da zajedno podignemo nivo ekološke kulture i svesti i  formiramo funkcionalan i i održiv sistem zaštite životne sredine.
 Zajedno do ekološki, čiste i zdrave životne sredine!</string>
@@ -41,14 +41,14 @@ Zajedno do ekološki, čiste i zdrave životne sredine!</string>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="confirm" translatesAutoresizingMaskIntoConstraints="NO" id="huX-uP-fRr">
-                    <rect key="frame" x="35" y="351.5" width="344" height="250"/>
+                    <rect key="frame" x="35" y="355.5" width="344" height="250"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="250" id="w66-gr-DUg"/>
                     </constraints>
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="5Dd-uc-bbg" secondAttribute="trailing" constant="25" id="DEb-Ce-J7m"/>
                 <constraint firstItem="T1a-Rr-Qwd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="25" id="W4E-ea-hN5"/>
@@ -67,9 +67,6 @@ Zajedno do ekološki, čiste i zdrave životne sredine!</string>
         </view>
     </objects>
     <resources>
-        <image name="confirm" width="238" height="207"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="confirm" width="119" height="103.5"/>
     </resources>
 </document>
